Lots of work.... to be done

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <title>Web Graphics Framework</title>
+    <script src="Math/Numeric.js"></script>
     <script src="Math/Vector2.js"></script>
     <script src="Animation/Timelines/Timeline.js"></script>
     <script src="Animation/Timelines/Vector2Timeline.js"></script>
     <script src="Animation/Controllers/Controller.js"></script>
-    <script src="Animation/Controllers/Vector2Controller.js"></script>
     <script src="Animation/Controllers/Vector2DispController.js"></script>
-    <script src="Animation/Controllers/Vector2AngDispController.js"></script>
+    <script src="Animation/Controllers/Vector2AngController.js"></script>
     <script src="Animation/Animators/TwoDimTransformAnimator.js"></script>
     <script src="Math/Rectangle2.js"></script>
     <script src="Rendering/Quad.js"></script>
