Massive controller revision. Adding Vector2Controller back.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="Animation/Timelines/Timeline.js"></script>
     <script src="Animation/Timelines/Vector2Timeline.js"></script>
     <script src="Animation/Controllers/Controller.js"></script>
+    <script src="Animation/Controllers/Vector2Controller.js"></script>
     <script src="Animation/Controllers/Vector2DispController.js"></script>
     <script src="Animation/Controllers/Vector2AngController.js"></script>
     <script src="Animation/Animators/TwoDimTransformAnimator.js"></script>
